# smooth

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/analyzer/: cpu.rs  hardware.rs  memory.rs  mod.rs  startup.rs  storage.rs
src-tauri/src/cleaner/: actions.rs  executor.rs  mod.rs
src-tauri/src/commands/: analyze.rs  cleanup.rs  diagnose.rs  mod.rs
src-tauri/src/diagnoser/: mod.rs  rules.rs
src-tauri/src/models/: cleanup.rs  diagnosis.rs  mod.rs  system.rs
src-tauri/src/platform/: mac.rs  mod.rs  windows.rs
src/components/analysis/: AnalysisDashboard.tsx
src/components/cleanup/: CleanupExecutor.tsx
src/components/common/: Badge.tsx  Button.tsx  ByteSize.tsx  Card.tsx  Logo.tsx  Modal.tsx  ProgressBar.tsx  Toggle.tsx  Tooltip.tsx
src/components/diagnosis/: DiagnosisView.tsx
src/components/layout/: AppShell.tsx  Header.tsx  ProgressStepper.tsx  Sidebar.tsx
src/components/results/: ResultsDashboard.tsx
src/components/welcome/: WelcomeScreen.tsx
src/hooks/: useCleanup.ts  usePlatform.ts  useSystemInfo.ts
src/lib/: advisor.ts  commands.ts  formatters.ts  platform.ts
src/stores/: analysisStore.ts  appStore.ts  cleanupStore.ts
src/types/: cleanup.ts  diagnosis.ts  maintenance.ts  system.ts
