[package]
name = "smooth"
version = "1.0.0"
description = "Smooth - Desktop System Optimizer"
authors = ["Smooth Team"]
edition = "2021"

[lib]
name = "smooth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
trash = "5"
chrono = "0.4"
dirs = "5"
walkdir = "2"
bytesize = { version = "1.3", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
